added some chinese dialogue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "G4C-Challenge.sln"
+    "dotnet.defaultSolution": "G4C-Challenge---CN.sln"
 }
